--- a/VRChat/71/1366671.html
+++ b/VRChat/71/1366671.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "n4MnaoFTOSeu0oZpUlMIy30y+qI3DlhTP5/+l2KMuWM="></script>
+    "EaE+iN2lhCXknTqk8PZoEXpMQqEkgsr8/MR9+YWwB4Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"麦わら帽子","description":"VRChat等に使える麦わら帽子です。\n\n処女作なので至らぬ所もございますが、何卒宜しくおねがいします。\n\n好きなアバターに被せて夏を満喫しちゃおう！\n\n\n\n＊画像はStandardシェーダーです。\n\n＊改変は自由にしていただいてOKです。めっちゃ喜びます。\n\n＊二次配布を禁止します。\n","url":"https://booth.pm/ja/items/1366671","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/70362ed7-0e33-4a16-9cbc-71a69d008f43/i/1366671/8debbb4b-7755-46da-95cf-84e7b79eb9e9_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n4MnaoFTOSeu0oZpUlMIy30y+qI3DlhTP5/+l2KMuWM="></script>
+    nonce="EaE+iN2lhCXknTqk8PZoEXpMQqEkgsr8/MR9+YWwB4Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1366671/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               52
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1366671/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               52
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
