--- a/VRChat/23/1366423.html
+++ b/VRChat/23/1366423.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "evxWrZ0FkWSkC+lJmNq6m4y/5miF9SSZu8BgeZm2ico="></script>
+    "yKw0BKo9iODeWHANxN61MVqOMe8oD+ZFSQmUKXAjYyQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版あり】SCP財団 ドクターコスチューム1","description":"Vroid用ワンピースの衣装テクスチャです。（ワンピースのみのデータになります）\n\n↓テクスチャ使用モデル\nhttps://hub.vroid.com/characters/8082467663812125861/models/1457629642890869373\n\n支援版にはテクスチャ編集用のGIMPのxcfデータが入っています。GIMP 2.8以降で動作確認済み。\n無料版にはpngデータのみとなっています。\n\n＊利用規約\n・著作権は放棄しません\n・トラブル等に一切責任を負いません\n・データを編集して使用可能です。\n・商用利用可能（Twitterに一言かけてください)\n・VRChat内での着用は可能です。\n・使用の際に製作者の表記は任意です\n・連絡先：＠tesla_0123","url":"https://booth.pm/ja/items/1366423","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/d786e558-81aa-497f-a2f1-b4f4cbf7c53d/i/1366423/5e59cb4f-d272-49b6-8fc8-ee90c9cff76f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="evxWrZ0FkWSkC+lJmNq6m4y/5miF9SSZu8BgeZm2ico="></script>
+    nonce="yKw0BKo9iODeWHANxN61MVqOMe8oD+ZFSQmUKXAjYyQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1366423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1366423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
