--- a/VRChat/68/1366168.html
+++ b/VRChat/68/1366168.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "acL8/GkN5HQWz2xqtoaiAYXf9BfKsflxsmnsP5Sezb0="></script>
+    "i9cIS7MZGrlJJl0uRFOCWF/P5yYg9G795mLGJlZ6PTE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCAvatarThumbnailTool v0.2","description":"■概要\nVRChat向けのアバターのサムネイル向けに画像を設定するための補助ツールになります。\n\n※過去のリンク切れの有料版をご購入の方は以前連絡した共有ファイルサーバーに更新版を配置していますのでご利用ください。\n\n■製品特徴\nVRモードのカメラで撮影した1920x1080の写真で簡単にサムネ画像が設定できます。\n\n■動作確認環境\n・Unity 2018.4.20f1\n・VRCSDK2-2020.06.16.20.54_Public\n\n■使用方法について\n1. Assets/TarbinWorks/VRCAvatarThumbnaillTool にある VRCAvatarThumbnail.prefab をHierarchyに配置します。\n2. VRCAvatarThumbnail 内の Thumbnail Texture に画像をドラッグアンドドロップして差し替えます。\n   → VRChat上のカメラで撮影した1920x1080の画像を想定しています。それ以外の画像を使用する場合は縦横比を予め調整してください。\n3. VRChat SDK で Build \u0026 Publish を実行しアップロード画面を表示します。\n   → Upload Imageにチェックが付いていない場合は有効にしてください。\n4.VRCAvatarThumbnail 内の \"Move position to VRCCam\" のボタンを押して位置を修正します。\n\n詳細な使用方法は添付画像をご確認ください。\n\n■利用規約\n・当データをそのままもしくは改変して再配布及び販売することを禁止します。\n・当データ及び当データの一部を使用していかなる損害が発生したとしても、作者はその責を負いません。\n\n■連絡先\n不具合・不明点等ありましたら以下にご連絡ください。\nhttps://twitter.com/tar_bin","url":"https://booth.pm/ja/items/1366168","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/37a91c67-db22-4395-9d58-f7bbcd966442/i/1366168/5487ef23-0b9e-4ce9-9eda-72e471140f15_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="acL8/GkN5HQWz2xqtoaiAYXf9BfKsflxsmnsP5Sezb0="></script>
+    nonce="i9cIS7MZGrlJJl0uRFOCWF/P5yYg9G795mLGJlZ6PTE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,10 +165,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1366168/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              658
+                              659
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1366168/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              658
+                              659
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
