--- a/VRChat/57/1366257.html
+++ b/VRChat/57/1366257.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Pa5TV7D9ig63Pr1hHPMzYwweM1Pa8SVdkcFnJEmY3o0="></script>
+    "wBI/aGRgGFX7z5jRbXQcceoNhvFgvmG4fBDJbF3VNZU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　つまようじ","description":"新鮮な木材から生まれた素材に、つまようじ職人が一本一本丁寧に溝を掘りました。匠の技が冴える逸品です…！\n\nというのは冗談ですが、VRC等での使用可能なつまようじです\n\n一本当たり△1700となっております\n内容物は\n・unitypackage\n・UV画像ファイル\n・blendファイル\nとなっています。\n\n画像４枚目のつまようじケースのおまけもありますが、本数×1700ポリゴンなので、使用時は各自どうにかして使用してください。\n\n","url":"https://booth.pm/ja/items/1366257","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e744eeac-3eef-408c-8011-89c5b4908b13/i/1366257/64107e76-a357-45f6-abcb-a2c6681e8fce_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Pa5TV7D9ig63Pr1hHPMzYwweM1Pa8SVdkcFnJEmY3o0="></script>
+    nonce="wBI/aGRgGFX7z5jRbXQcceoNhvFgvmG4fBDJbF3VNZU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1366257/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1366257/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
