updated at: 2023-04-25 17:41, コーヒー　ドリップセット - lizardglassesの雑貨店 - BOOTH

--- a/VRChat/67/1366267.html
+++ b/VRChat/67/1366267.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "s3uK0g8D+KIHUIHlJYThtqOiIFcoZsD3/zJjD9usv38="></script>
+    "OuBY57t/s6ENDByeJd068WlLaTeOp6od1O8zpTik30g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コーヒー　ドリップセット","description":"コーヒーミル、コーヒーサーバー、ドリッパー、ドリップケトルの４点セットです。\n\n※スケールの設定は行っていませんので、調整は各自でお願いします。\n\n\nポリゴン数：\n　コーヒーミル　　：2638\n　コーヒーサーバー：715\n　ドリッパー　　　：564\n　ドリップケトル　：1240","url":"https://booth.pm/ja/items/1366267","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/f8164400-9f44-409e-96df-13b02e21d48d/i/1366267/7c9896b5-7dcd-436b-8029-5bd5df40ff00_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s3uK0g8D+KIHUIHlJYThtqOiIFcoZsD3/zJjD9usv38="></script>
+    nonce="OuBY57t/s6ENDByeJd068WlLaTeOp6od1O8zpTik30g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1366267/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1366267/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
