--- a/VRChat/30/1365930.html
+++ b/VRChat/30/1365930.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AUaAHcXq3lbrHFGKT/Bg/aUTgXYu5evHSC0ks/G2Zb0="></script>
+    "T5aHwb88w/TcOXFHLa9tJzmkvcO+KMu7yo4hROT16mk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向け読める本エディタV2","description":"VRCSDK2終了に伴い、有料版の配布を停止することにしました\n無料版は引き続きDLが可能ですが、VRCSDK3では使用することができません\n\n\nVRCchatのワールドに設置する用の本を作るUnity拡張エディタのバージョン2です\n\n画像でページを用意してエディタを使用して設定することで簡単にVRChat上で動作する読める本を設置することが可能になります\n\nバージョン2.3.0を公開しました\n同時に表示できるページ数が可変になり、1ページを複数枚表示することが可能になりました\nもくじ作成機能が使いやすくなりました\nまだ不安定版ということで、別枠公開にしてます\n\n\n前バージョンの読める本エディタはこちら↓\nhttps://asobiy3.booth.pm/items/1029902\n\n前バージョンとは大きくエディタの操作は異なりますが、VRC上での動作は殆ど同じにすることが可能です\n\n\n支援枠について\n500円支援枠は前バージョンにもあったprefabが同梱されています(現在の機能上同期対応版のみの同封、用途に合わせてObject_sinkを外すなどしてください)\n\n1000円支援枠にはV2で追加された機能向けのprefabを同梱する予定ですが、現在は500円支援枠と同様になります","url":"https://booth.pm/ja/items/1365930","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"}}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AUaAHcXq3lbrHFGKT/Bg/aUTgXYu5evHSC0ks/G2Zb0="></script>
+    nonce="T5aHwb88w/TcOXFHLa9tJzmkvcO+KMu7yo4hROT16mk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1365930/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               162
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1365930/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               162
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
