updated at: 2023-04-25 17:42, 太陽モチーフアクセサリー - pianna - BOOTH

--- a/VRChat/25/1365625.html
+++ b/VRChat/25/1365625.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7VgF6ytxZElOgocOXuzt5XhTQvxWEK2gYHhDGDgBVts="></script>
+    "1ID9NR/VoOhw1xPFibT1zfa0rQqAYSgQD0dKvc02nUU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"太陽モチーフアクセサリー","description":"太陽モチーフアクセサリー\n\nBlenderで太陽と瞳をモチーフにしたアクセサリーを作りました。\n（ファイル名がペンダントとなっていますがチェーンを付けていないのでアクセサリーとしました）\n※2020/04/01までのUnity2017.4.28f1での動作確認\n\nテクスチャにはpixabay（https://pixabay.com/ja/）のものを改変、使用しています。\n\nシェーダーにはArktoon-Shaders（https://booth.pm/ja/items/1027997）を使用しています。\nParallaxed Emissionにより奥行きを感じられます。\n\nfbxファイル制作：Pianna\nテクスチャ制作・改変：Pianna\n\n元ネタ：霊烏路空（東方地霊殿　～ Subterranean Animism.）","url":"https://booth.pm/ja/items/1365625","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/35109731-1a22-4535-a2f0-5dd6f73a477e/i/1365625/59e10eb0-e73b-4500-8aaa-8dc97becfd11_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7VgF6ytxZElOgocOXuzt5XhTQvxWEK2gYHhDGDgBVts="></script>
+    nonce="1ID9NR/VoOhw1xPFibT1zfa0rQqAYSgQD0dKvc02nUU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1365625/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               200
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1365625/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               200
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
