updated at: 2023-04-25 17:44, 約束の鍵　VRC想定3Dモデル - あみまみ堂本店 - BOOTH

--- a/VRChat/73/1360273.html
+++ b/VRChat/73/1360273.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IRHTZXkQgI55G13cZpSnnDFjLD3Ris7DQNaG3afQJjU="></script>
+    "CwZgfWSfNRD/ysU3HkizGfaruDQ7AQhtDwhdMXDxEFU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"約束の鍵　VRC想定3Dモデル","description":"利用規約を守って使用してください\nテクスチャバリエーションが３つあります\nトゥーンシェーダー向けテクスチャ\nスタンダード想定高クオリティテクスチャ\nちゅばき様とコラボしたテクスチャ\n\n更新履歴\n2019/5/11\nVer1.1(アクセ用チョーカーの追加）\n\n3Dモデル製作@amimami_VRC","url":"https://booth.pm/ja/items/1360273","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/2f3669bf-a58f-414c-9f6a-4b6d0b428946/i/1360273/7b2a1a1b-126c-4104-9305-2d85fb3ba14c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IRHTZXkQgI55G13cZpSnnDFjLD3Ris7DQNaG3afQJjU="></script>
+    nonce="CwZgfWSfNRD/ysU3HkizGfaruDQ7AQhtDwhdMXDxEFU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1360273/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               186
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1360273/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               186
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
