updated at: 2023-04-25 17:46, [無料]つの - UNDOのよろず屋 - BOOTH

--- a/VRChat/38/1075438.html
+++ b/VRChat/38/1075438.html
@@ -99,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2hx++I8KWW2C7jY6As/bWWLHUjyBPQgqrxAZNnz5JkE="></script>
+    "bSaXJnZxFXlnI7/hoytEp/etnR+zWhLK6ZjZyaxue5Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料]つの","description":"お客様大感謝祭無料放出です！！\nドラゴンっぽい角と巻き角2種が入ってます。\nいい感じの黒曜石っぽいノーマルマップとかテクスチャ、骨っぽいのもついてます\nポリゴンはドラゴン角が二本で△1980、まきづのが２本で△420となっています。\n\n内容物　ＦＢＸ２種*テクスチャ２種＊３枚","url":"https://booth.pm/ja/items/1075438","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/97a252e6-17fb-4604-b972-5868719c8877/i/1075438/b8b07c8d-ecf8-49d2-b861-65bdca2665e3_base_resized.jpg"}
     </script>
@@ -112,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2hx++I8KWW2C7jY6As/bWWLHUjyBPQgqrxAZNnz5JkE="></script>
+    nonce="bSaXJnZxFXlnI7/hoytEp/etnR+zWhLK6ZjZyaxue5Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -136,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -179,10 +181,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1075438/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              308
+                              309
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -194,14 +196,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1075438/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              308
+                              309
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
