updated at: 2023-04-25 17:47, 【VRChat向け/無料配布】会議机 - ワールド工房ゆーれい - BOOTH

--- a/VRChat/07/1353507.html
+++ b/VRChat/07/1353507.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "P2Aqx1DTLJKIvQyDFHvbfhxJH6vN4o0VH/IsvcxGt9I="></script>
+    "F/MVKd49nDHDlqyvMECm5X7StChe5plKBfewcbFJNMU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け/無料配布】会議机","description":"イベントなどでよく見る机のモデルです。\nVRChatで利用する場合付属のプレハブを使うかスケールを0.4倍ぐらいに調整してご利用ください。\n\n\n● セット内容 ●\nテクスチャ\n机のプレハブ\n机のモデル\n\n● できること ●\n本モデルの改造\n本モデルの商用利用\nR-18/R-18G作品への利用\n\n\n● できないこと ●\n本モデルの再配布\n\n● 著作権について ●\n本モデルの著作権及び改変されたモデルの著作権はta3に帰属するものとします。\n\n","url":"https://booth.pm/ja/items/1353507","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"140"},"image":"https://booth.pximg.net/c/620x620/880cf89f-fa01-4384-a8aa-8742d5a8f71d/i/1353507/941e2b32-0c05-46d1-8f8e-2b3f27840bf2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="P2Aqx1DTLJKIvQyDFHvbfhxJH6vN4o0VH/IsvcxGt9I="></script>
+    nonce="F/MVKd49nDHDlqyvMECm5X7StChe5plKBfewcbFJNMU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1353507/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1353507/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
