updated at: 2023-04-25 17:47, Uuga Shock - VRChat向け3Dモデル - nooktown - BOOTH

--- a/VRChat/04/1352804.html
+++ b/VRChat/04/1352804.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NGLcqXhZBi1JZG3NvkAi6w1Q2m8PJQz3n+S1if35Iao="></script>
+    "GRuTswr6e0QQEMwJanpiotH4zbdX5RjBwm/WirBN/iM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Uuga Shock - VRChat向け3Dモデル","description":"■この3Dモデルについて\n・恐竜型生物を模した置物です。\n\n■コンテンツについて\n・VRChatでの利用を想定した3Dモデルです。\n・アバター用の設定はされていません。\n・△ポリゴン数：5560, マテリアル数：2\n\n■シェーダーについて\n・whiteflare様のUnlit_WF_ShaderSuiteを同梱しています。\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite\n\n■お問い合わせ\nTwitter:@ugai_34","url":"https://booth.pm/ja/items/1352804","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/23840f3b-d94e-4725-8c42-f7a85f56d151/i/1352804/9acf8a80-057a-4838-8bf6-814395f536d6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NGLcqXhZBi1JZG3NvkAi6w1Q2m8PJQz3n+S1if35Iao="></script>
+    nonce="GRuTswr6e0QQEMwJanpiotH4zbdX5RjBwm/WirBN/iM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1352804/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1352804/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
