updated at: 2023-04-25 17:47, 【3Dデータ】お年玉.fbx - noysのおもちゃ箱 - BOOTH

--- a/VRChat/08/1152008.html
+++ b/VRChat/08/1152008.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+BmmfjRg5dy3UNxmq3OA5WF95XF49378BRsPGig7Sd4="></script>
+    "mY2DyFXxMT966UD34T0yJ/hQZlAOcjlXZ6fYxFhlaOc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dデータ】お年玉.fbx","description":"お年玉.fbxです\n正確にはpotibukuro.fbxです。\n無地のpsdデータ付なのであなただけのオリジナルポチ袋が作れます！\nVRChatでの使用を想定しています。","url":"https://booth.pm/ja/items/1152008","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/635d0b04-87c8-4976-9dd6-c24160e40b2f/i/1152008/03f212cf-7e18-407f-850f-3b775006fd8e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+BmmfjRg5dy3UNxmq3OA5WF95XF49378BRsPGig7Sd4="></script>
+    nonce="mY2DyFXxMT966UD34T0yJ/hQZlAOcjlXZ6fYxFhlaOc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1152008/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1152008/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
