updated at: 2023-04-25 17:50, 紅白餅 Ver.1.0 - お休みさんの作ったもの - BOOTH

--- a/VRChat/58/1149858.html
+++ b/VRChat/58/1149858.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XAEjZNVv11MhqYrlqi5xtWEc7cztsqvjC6QdQGz7iOc="></script>
+    "f0E1lETexHU/fTabrBoeW3jxtzTYjVXKZzp6sbfdcaM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紅白餅 Ver.1.0","description":"おめでたいときに配られたりしそうな袋入りのお餅です。(3160ポリゴン,マテリアルx2)\nUnityPackage形式となっており、主にVRChatでの利用を想定しています。\n通常バージョンのほか、ダイナミックボーン使用で揺れるバージョンも同梱しています。","url":"https://booth.pm/ja/items/1149858","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1149858/555576bb-db92-48ff-864b-16e7bf59fd06_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XAEjZNVv11MhqYrlqi5xtWEc7cztsqvjC6QdQGz7iOc="></script>
+    nonce="f0E1lETexHU/fTabrBoeW3jxtzTYjVXKZzp6sbfdcaM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1149858/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1149858/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
