updated at: 2023-04-25 17:53, 無料３Dモデル「花のような触手」 - 仮想VoidCat - BOOTH

--- a/VRChat/75/1147175.html
+++ b/VRChat/75/1147175.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xAjGzc/CyT6gNqXEFJZwEdbe4tAYhDeZm3xgc46zKi0="></script>
+    "eiO/l6kQ8eDLN9HShXF48KM38TGbCFJpHkgadhv3xWQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"無料３Dモデル「花のような触手」","description":"●概要\n花のような触手３Ｄモデルです。\n\n・3Dデータ形式：FBX\n・テクスチャー形式：PNG,PSD\n・ポリゴン合計：2178\n・ボンの数：17\n・メッシュの数：2\n\n●シャップキーの説明\n・Open：触手の開花状態\n・SubtentacleWide：小さい触手の太さ\n\n","url":"https://booth.pm/ja/items/1147175","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1147175/789b2147-3b31-41f3-bc6c-040665b9bb9c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xAjGzc/CyT6gNqXEFJZwEdbe4tAYhDeZm3xgc46zKi0="></script>
+    nonce="eiO/l6kQ8eDLN9HShXF48KM38TGbCFJpHkgadhv3xWQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1147175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              334
+                              335
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1147175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              334
+                              335
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
